# randoffee

./: .copier-answers.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/randoffee/: __init__.py  file.py  leader.py  main.py  randomise.py  run.py
